# IncentiveSwift

./: .env.example  Cargo.toml  Dockerfile  Dockerfile.minimal  HANDOFF.md  INCENTIVESWIFT_ARCHITECTURE.md  INCENTIVESWIFT_RUST_BUILD_PROMPT.md  fix_mech.py  fix_mech2.py
.github/workflows/: deploy.yml
migrations/: 000001_password_resets.sql  00001_full_schema.sql  00002_api_keys.sql  00003_portfolio_integrations.sql  20260627001_surface_config.sql  20260627002_custom_domains.sql  20260627003_widget_snippets.sql  20260627004_tablet_sessions.sql  check_features.sql  insert_surface_features.sql  register_feature_keys.sql
public/: index.html
src/: config.rs  error.rs  features.rs  lib.rs  main.rs  main.rs.bak  state.rs
src/access/: feature_gate.rs  mod.rs
src/db/: accounts.rs  campaigns.rs  contacts.rs  delivery_log.rs  entries.rs  loyalty.rs  mod.rs  plan_tiers.rs  questions_answers.rs  raffles.rs
src/delivery/: coreswift.rs  mod.rs  payload.rs  webhook.rs
src/handlers/: admin_handler.rs  admin_handler.rs.bak  affiliates_handler.rs  api_keys.rs  api_keys.rs.bak  auth_handler.rs  auth_handler.rs.bak  calendar_events_handler.rs  call_logs_handler.rs  campaigns.rs  campaigns_handler.rs  categories_handler.rs  clients_handler.rs  contacts.rs  deals_handler.rs  delivery.rs  email_templates_handler.rs  entries.rs  export_templates_handler.rs  health.rs  import_logs_handler.rs  integration_target_handler.rs  integration_target_handler.rs.bak  knowledge_base_handler.rs  leads_handler.rs  loyalty.rs  mod.rs  plans_handler.rs  plans_handler.rs.bak  portfolio_companies_handler.rs  portfolio_handler.rs  portfolio_handler.rs.bak  raffles.rs  raffles.rs.bak  reports_handler.rs  reviews_handler.rs  surface_handler.rs  surface_handler.rs.bak  surfaces_handler.rs  tag_groups_handler.rs  (+4 more)
src/mechanics/: calculator.rs  loyalty_checkin.rs  mod.rs  raffle_draw.rs  scoring.rs
src/security/: auth.rs  headers.rs  jwt.rs  mod.rs  rate_limit.rs
templates/: embed_widget.html  full_page.html  tablet.html
tests/: entries_test.rs  feature_gate_test.rs  mod.rs  payload_contract_test.rs  raffle_draw_test.rs
(+4 files in other folders)
