[package]
name = "incentiveswift-api"
version = "0.2.0"
edition = "2021"
rust-version = "1.96"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
argon2 = "0.5"
rand = "0.8"
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "timeout"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "rust_decimal"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
bcrypt = "0.15"
jsonwebtoken = "9"
governor = "0.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
thiserror = "1"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
anyhow = "1"
rust_decimal = { version = "1", features = ["serde"] }

[dev-dependencies]
tokio-test = "0.4"
